Modify a photo's extension

--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -19,7 +19,7 @@
   website: https://scholar.google.com/citations?user=f3E9uncAAAAJ&hl=en
 
 - name: Honoka Toda
-  image: /assets/images/Honoka_Toda.jpeg
+  image: /assets/images/Honoka_Toda.jpg
   bio: "Honoka Toda works for NTT R&D, a Japanese IT company. She is interested in data science and social psychology. Her main research interests are altruistic behavior among groups and psychological factors."
   website: https://twitter.com/toda00toda
 
