--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -1,5 +1,5 @@
 - name: Wentao Xu
-  image: /assets/images/Wentao_Xu.jpeg
+  image: ""
   bio: ""
   website: ""
 
@@ -29,26 +29,26 @@
   website: https://scholar.google.com/citations?user=rWxItvIAAAAJ&hl=en&oi=ao
 
 - name: Zelda Marquardt
-  image: /assets/images/Zelda_Marquardt.jpeg
+  image: ""
   bio: ""
   website: ""
 
 - name: Georg Ahnert
-  image: /assets/images/Georg_Ahnert.jpeg
+  image: ""
   bio: ""
   website: ""
 
 - name: Jeehyun Park
-  image: /assets/images/Jeehyun_Park.jpeg
+  image: ""
   bio: ""
   website: ""
 
 - name: Sabina Insebayeva
-  image: /assets/images/Sabina_Insebayeva.jpeg
+  image: ""
   bio: ""
   website: ""
 
 - name: Bito Hironobu
-  image: /assets/images/Bito_Hironobu.jpeg
+  image: ""
   bio: ""
   website: ""
