--- a/_data/2022/haifa/people.yml
+++ b/_data/2022/haifa/people.yml
@@ -72,3 +72,8 @@ Teaching Assistants:
       bio: "I am an assistant professor (lecturer) in political science at the University of Haifa. Previously, I was a postdoctoral fellow at the Hebrew University. I have a PhD in political science, from the Massachusetts Institute of Technology (2019). I study religion and conflict in Israel and the Muslim world. My work combines big data approaches with experiments and in-depth interviews. My research has been published in multiple outlets including the American Sociological Review, Political Behavior, and the Journal of Conflict Resolution."
       image: /assets/images/Michael_Freedman.jpg
       website: http://mfreedman.mit.edu/
+      
+    - name: Ofra Amir
+      bio: "Ofra Amir is an Assistant Prof. at the faculty of Industrial Engineering and Management at the Technion. Her research lies at the intersection of artificial intelligence and human-computer interaction."
+      image: /assets/images/Ofra_Amir.png
+      website: https://web.iem.technion.ac.il/site/he/academicstaff/ofra-amir/     
