--- a/_data/2022/haifa/speakers.yml
+++ b/_data/2022/haifa/speakers.yml
@@ -8,4 +8,8 @@
   image: /assets/images/Michael_Freedman.jpg
   website: http://mfreedman.mit.edu/
 
+- name: Ofra Amir
+  bio: "Ofra Amir is an Assistant Prof. at the faculty of Industrial Engineering and Management at the Technion. Her research lies at the intersection of artificial intelligence and human-computer interaction."
+  image: /assets/images/Ofra_Amir.png
+  website: https://web.iem.technion.ac.il/site/he/academicstaff/ofra-amir/  
 
