--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -94,7 +94,7 @@ participants:
      bio: "Andy Chou is a postdoctoral scholar at the Flagship Project in the Department of Sociology at National Taipei University. His research interests are economics of education, labor economics, and applied microeconomics."
      website:
    - name: Pei-Chiang Lee
-     image: 
+     image: /assets/images/PeiChiangLee.jpg
      bio: "Pei-Chiang Lee is a research assistant in the National Academy for Educational Research. He received his M.S.W. from the Department of Social Work at National Taiwan University. His research interests focus on the well-being and educational outcomes of students with disabilities, with special attention to their school-to-work transition and independent living. His current research project uses administrative data to explore the inequality of employment outcomes between university graduates with and without disabilities."
      website:
    - name: Che-Wei Hsu
