--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -39,8 +39,8 @@
   website: ""
 
 - name: Jeehyun Park
-  image: ""
-  bio: ""
+  image: /assets/images/JeeHyun_Park.JPG
+  bio: "Jeehyun Park is a Ph.D. candidate in the graduate program of Global Studies at Sophia University, Japan. Her work focuses on foreign aid and social development, especially in the health and education sectors. The current dissertation explores the role of policy evaluation in terms of improving aid effectiveness."
   website: ""
 
 - name: Sabina Insebayeva
