Adding another participant

--- a/_data/2022/aachen-graz/participants.yml
+++ b/_data/2022/aachen-graz/participants.yml
@@ -38,6 +38,9 @@
     \ interest her include data feminism and use of data as a tool for society."
   image: /assets/images/az_3.jpg
   
+- name: "Mathias Angermaier"
+  bio: "I am a student at the University Graz/Technical University Graz in Computational Social Systems with a background in Computer Science and Economics. My research interest focuses on the analysis of various political and economic systems and their influence on individual decision-making via Agent-Based Modelling. Further interest lies in the analysis of societal phenomena with the motivation to computationally calculate parts of their outcome while they still evolve."
+
 - name: Yasaman Asgari
   bio: "Yasaman is an undergraduate student studying computer science. She will attend\
     \ \xC9cole Normale Superieure Lyon for her master's degree. Previously, she has\
