--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -11,7 +11,7 @@
 - name: Shogo Masaya
   image: /assets/images/Shogo_Masaya.jpg
   bio: "Shogo Masaya works for an energy company, INPEX. His current interests include data processing, energy transformation and innovation. He received his Ph.D. from Delft University of Technology in applied physics."
-  website: ""
+  website:
 
 - name: Makoto Takeuchi
   image: /assets/images/Makoto_Takeuchi.png
@@ -41,14 +41,14 @@
 - name: Jeehyun Park
   image: /assets/images/JeeHyun_Park.JPG
   bio: "Jeehyun Park is a Ph.D. candidate in the graduate program of Global Studies at Sophia University, Japan. Her work focuses on foreign aid and social development, especially in the health and education sectors. The current dissertation explores the role of policy evaluation in terms of improving aid effectiveness."
-  website: ""
+  website:
 
 - name: Sabina Insebayeva
   image: ""
   bio: ""
   website: ""
 
-- name: Bito Hironobu
+- name: Hironobu Bito
   image: ""
   bio: ""
   website: ""
