--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -44,11 +44,11 @@
   website:
 
 - name: Sabina Insebayeva
-  image: ""
-  bio: ""
-  website: ""
+  image: /assets/images/Sabina_Insebayeva.jpg
+  bio: "Sabina Insebayeva is currently a research associate at the Asia Research Institute (Identities Cluster), National University of Singapore (NUS). Prior to this she was a researcher affiliated with the Nippon Foundation Central Asia-Japan Human Resource Development Project, University of Tsukuba, and a research fellow at the Central Asia Program of the Institute for European, Russian and Eurasian Studies (IERES), the George Washington University (GW)."
+  website:
 
 - name: Hironobu Bito
-  image: ""
-  bio: ""
-  website: ""
+  image: /assets/images/Hironobu_Bito.png
+  bio: "He is currently a Ph.D. student at Osaka University in Japan and specializes in Sociology. He studies an interdependence of normative and non-normative incentives in social science theory, taking a theoretical approach from explanatory sociology and rational choice sociology. He is interested in the conditions that normative conduct and internalization of a norm occur and diffuse and why gendered division of housework equalizes at a slower pace than expected. He mainly uses quantitative data and experiments to solve theoretical and empirical puzzles."
+  website:
