--- a/_data/2022/aachen-graz/participants.yml
+++ b/_data/2022/aachen-graz/participants.yml
@@ -171,7 +171,12 @@
     \ work, her lifelong interest is in the field of perception of art"
   website: https://www.linkedin.com/in/evgenia-korotchenko-12786b1b/
   image: /assets/images/az_17.jpg
-  
+
+- name: Nick Lewis
+  bio: "Nick Lewis is a PhD student at the London School of Economics and Political Science examining the effects of digital technology on democratic deliberation. Combining computational methods in R and Python with field experiments and surveys, he focuses on political behaviour and its interaction with communication, psychology, polarisation, and nationalism."
+  website: https://twitter.com/NickLewisLSE
+  image: /assets/images/az_17_0.jpg
+
 - name: Haokun Liu
   bio: "Haokun is an MSc student in Geography at Uni Bern, Switzerland. His BSc is\
     \ in Geographic Information Science and Finance from Southwest University, China.\
