--- a/_data/2022/jogja/participants.yml
+++ b/_data/2022/jogja/participants.yml
@@ -16,7 +16,7 @@
   bio: "Ardee Joy Ocampo is an Assistant Professor at the College of Computer Studies and Engineering, LORMA Colleges, and the Program Head of Masters in Information Systems. She received her B.S. degree in Information Technology from Lorma Colleges in 2005, her Master's degree in Information Technology in 2010 and her PhD degree in Information Technology from the University of the Cordilleras last March 2022. Her research entails integrating Mobile AR and Open Data on Tourism, analyzing feedback on citizen participation systems for disaster preparedness, and evaluating user experience and learning behaviors in gamified learning environments. She co-authored several research papers on technology in viticulture and sericulture, the development of smart blind canes, AR and VR technologies for tourism, and gamified applications such as Iloko translationary. Currently, she is interested in research on computational social sciences, data visualization, and machine learning in agriculture, technology, health, and e-learning. She is currently working with her students on a meat quality detection device using CNN."
  
 - name: Arwan Ahmad Khoiruddin	
-  image: /assets/images/Jog22_ArwanKhoiruddin.jpg
+  image: /assets/images/Jog22_ArwanKhoiruddin.png
   bio: "Arwan is a former lecturer in the Department of Informatics at Universitas Islam Indonesia. Since 2015, he has been a researcher at the Indonesia Institute of Sciences (now Badan Riset dan Inovasi Nasional - BRIN). His majors are big data analytics and image analysis. He is working on optimizing the Hadoop Distributed File System for faster big data processing. He is starting research work on privacy-preserving machine learning."
   website: https://www.linkedin.com/in/arwan-ahmad-khoiruddin-aa507323/
  
@@ -29,7 +29,7 @@
   bio: "Elvira is a junior lecturer in the Electrical Engineering Department, Universitas Islam Indonesia. She is also a member of the biomedical research group within the electrical engineering department. Her master's thesis project was mainly focused on data mining for medical data. She analyzed the effect of reducing the dimension of data through feature selection on the classification algorithm performance. Her current research is focused on home care monitoring systems and image classification."
  
 - name: Frisca Rahmadina	
-  image: /assets/images/Jog22_FriscaRahmadina.jpg
+  image: /assets/images/Jog22_FriscaRahmadina.png
   bio: "Frisca is currently a master of public health student at Gadjah Mada University. She earned her Bachelor's degree from University of Indonesia. She is interested in conducting research in computational social science, particularly human behavior related to air pollution, using data from social media platforms. She is currently conducting research on the relationship between air pollution and COVID-19, which she is analyzing using R."
   website: https://www.instagram.com/frhmdna/
  
@@ -86,11 +86,11 @@
   bio: "Tiara Saputri Darlis is a linguist and faculty member for the Department of Japanese Language and Literature at Universitas Nasional in Jakarta, Indonesia. She is also a Ph.D candidate in Applied Linguistics at Universitas Negeri Jakarta. Her research interests include digital literature development, human interaction on social media, and pedagogical methods in the digital era."
  
 - name: Vittalis Ayu
-  image: /assets/images/Jog22_VittalisAyu.jpg
+  image: /assets/images/Jog22_VittalisAyu.png
   bio: "Vittalis Ayu is a Junior Lecturer in the Department of Informatics at Sanata Dharma University. She is currently involved in the Networks Laboratory and works mostly on distributed mobile networks, especially Opportunistic Mobile Networks (OMNs). Her current research interests include exploiting human social attributes and mobility characteristics to enhance resource-aware routing performances in OMNs."
  
 - name: Vynska Amalia Permadi
-  image: /assets/images/Jog22_VynskaPermadi.jpg
+  image: /assets/images/Jog22_VynskaPermadi.png
   bio: "Vynska Amalia Permadi is an Assistant Professor in the Informatics Department at Universitas Pembangunan Nasional \"Veteran\" Yogyakarta. She received her Master's degree from Institut Teknologi Sepuluh Nopember. Her current research interests are in data science in economics and business. Since 2021, Vynska has been an active member of her university's research group on the economic, financial, and digital industries. She has been asked to help Bank Indonesia Yogyakarta representatives make analytical tools and a dashboard for predicting inflation."
  
 - name: Wasisto Raharjo Jati
