--- a/_data/2022/haifa/people.yml
+++ b/_data/2022/haifa/people.yml
@@ -132,7 +132,7 @@ participants:
       website:
 
     - name: Shani Zohar
-      bio: "Shani is currently a doctoral candidate in the department of Psychological Sciences at the University of Haifa Shani is also an Idit Ph.D. fellowship starting her 3rd year. The focus of her graduate research is the therapeutic effects and mechanisms of a web-based mobile-supported mental health intervention program, "Mindfulness-SOS for Refugees," designed to promote trauma recovery and mental health among those who have been forcibly displaced. Additionally, she is interested in the possible application of computational social science to the study of mental health generally and specifically among forcibly displaced persons. She holds an MA in Clinical Child Psychology from Bar Ilan University and a BA in Psychology and Education from Ben-Gurion University of the Negev (Israel)."
+      bio: "Shani is currently a doctoral candidate in the department of Psychological Sciences at the University of Haifa Shani is also an Idit Ph.D. fellowship starting her 3rd year. The focus of her graduate research is the therapeutic effects and mechanisms of a web-based mobile-supported mental health intervention program, /"Mindfulness-SOS for Refugees/", designed to promote trauma recovery and mental health among those who have been forcibly displaced. Additionally, she is interested in the possible application of computational social science to the study of mental health generally and specifically among forcibly displaced persons. She holds an MA in Clinical Child Psychology from Bar Ilan University and a BA in Psychology and Education from Ben-Gurion University of the Negev (Israel)."
       image: /assets/images/Shani Zohar.jpg
       website:
 
@@ -147,7 +147,7 @@ participants:
       website: https://indiana.academia.edu/TalFeder
 
     - name: Vanessa Cywiak
-      bio: "Vanessa is a Ph.D. candidate in the Department of Psychiatry at the Israel Institute of Technology “Technion”. She is a Clinical and Scholar Psychologist and her research focuses on preventing Postpartum Depression and Post-Traumatic Stress Disorder through the analysis of cognitive biases during pregnancy."
+      bio: "Vanessa is a Ph.D. candidate in the Department of Psychiatry at the Israel Institute of Technology /"Technion/". She is a Clinical and Scholar Psychologist and her research focuses on preventing Postpartum Depression and Post-Traumatic Stress Disorder through the analysis of cognitive biases during pregnancy."
       image: /assets/images/Vanessa_Cywiak.jpeg
       website:
 
