--- a/_data/2022/jogja/schedule.yml
+++ b/_data/2022/jogja/schedule.yml
@@ -19,7 +19,7 @@
 - date: 2022-07-20
   events:
     - name: "8:00 - 8:15 Opening Speech - Fathul Wahid"
-    - name: "8:15 - 9:45 Solving Societal Puzzles with Artificial Intelligence & Algorithms (Steven S. Skiena)"
+    - name: "8:15 - 9:45 Solving Societal Puzzles with Artificial Intelligence & Algorithms - Steven S. Skiena"
     - name: "9:45 - 11:15 Why do we friend similar others in a diverse world? - Firman M. Firmansyah"
     - name: "11:15 - 12:30 Sentiment Analysis through Text and Facebook Special Reactions - Ahmad R. Pratama"
     - name: "12:30 - 13:00 Lunch Break"
