--- a/_data/2022/haifa/people.yml
+++ b/_data/2022/haifa/people.yml
@@ -81,3 +81,7 @@ Teaching Assistants:
 participants:
   title: participants
   people:
+    - name: Aial Sobeh
+      bio: "Upcoming Ph.D candidate at the Department of Psychology, University of Haifa. Research domains- Social and cognitive neuroscience, network neuroscience, Neuroeconomics. My current research examines the emergence of collective morality through the dynamic and adaptive interaction of brains"
+      image: /assets/images/Aial_Sobeh.jpeg
+      website:
