--- a/_data/2022/aachen-graz/faculty.yml
+++ b/_data/2022/aachen-graz/faculty.yml
@@ -17,3 +17,8 @@
   image: /assets/images/AachenGrazMarkus.png
   bio: "Markus Strohmaier leads the Chair for Data Science in the economic and social sciences at University of Mannheim (Germany). He is also the Scientific Coordinator for Digital Behavioral Data at GESIS and an External Faculty Member at the Complexity Science Hub Vienna. Previously, he was a Post-Doc at the University of Toronto (Canada), an Assistant Professor at Graz University of Technology (Austria), a visiting scientist at (XEROX) Parc (USA), a Visiting Assistant Professor at Stanford University (USA) and the founder and scientific director of the department for Computational Social Science at GESIS (Germany). He is interested in applying and developing computational techniques to research challenges on the intersection between computer science and the social sciences / humanities. <a href=\"http://markusstrohmaier.info/\">http://markusstrohmaier.info/</a>"
   website: "http://markusstrohmaier.info/"
+
+- name: Anna Di Natale
+  image: /assets/images/anna_di_natale.jpg
+  bio: "I am a PhD candidate at the Medical University of Vienna, Graz University of Technology and Complexity Science Hub. I am part of the Computational Social Science Lab Austria, led by David Garcia, where we study human behavior through digital traces. Previously, I have studied mathematics at the University of Bologna. I am mainly interested in approaching linguistic theories through data science and in the use of the insights gained in such process for the creation of novel NLP methods. In my PhD I study the linguistic idea of colexification from a computational point of view."
+  website: "https://annadinatale.eu/"
