--- a/_data/2022/tokyo/participants.yml
+++ b/_data/2022/tokyo/participants.yml
@@ -29,8 +29,8 @@
   website: https://scholar.google.com/citations?user=rWxItvIAAAAJ&hl=en&oi=ao
 
 - name: Zelda Marquardt
-  image:
-  bio:
+  image: /assets/images/Zelda_Marquardt.JPG
+  bio: "Zelda Marquardt is a Ph.D. candidate at Kyoto University's Graduate School of Advanced Integrated Studies in Human Survivability. Her research topic is on bridging the gender gap in financial inclusion. She is currently focused on global migration and remittance networks."
   website:
 
 - name: Georg Ahnert
