--- a/_data/2022/taiwan/people.yml
+++ b/_data/2022/taiwan/people.yml
@@ -113,6 +113,10 @@ participants:
      image: /assets/images/1A7Mkg4LTrsMfoyJLbb6s9sRVXsJ32_K_.png
      bio: "Yu Zhang is a graduate student in the Department of Computer Science and Information Engineering at National Central University (NCU), Taiwan. Before, he graduated from Graduate Institute for Social Transformation Studies at Shih Hsin University. His research interests are natural language processing, automatic question answering, text mining and analysis."
      website:
+   - name: Yi-Hua Lin
+     image: 
+     bio: "Yi Hua Lin is a graduate student in Computer Science at National Chengchi University. Her research interests include Data Mining and Social Computing."
+     website:
      
 organizers:
   title: Organizers
