--- a/_data/2022/haifa/people.yml
+++ b/_data/2022/haifa/people.yml
@@ -86,13 +86,18 @@ participants:
       image: /assets/images/Aial_Sobeh.jpeg
       website:
       
+    - name: Alina Rozenfeld
+      bio: "Dr. Alina Rozenfeld-Kiner Post-doctoral fellow, Department of Sociology, Hebrew University.My research interest lies in the patterns of stratification and inequality generated in the labor market. In my Ph.D. thesis, I analyzed the role of human resource management practices in shaping wage inequality, within and between work establishments, by gender, class, and education. Currently, I am interested in the role of organizations, managers, and working environment in shaping the skills and task composition of jobs."
+      image: /assets/images/Alina_Kiner.jpg
+      website:      
+      
     - name: Alisa Kanterman
       bio: " "
       image: /assets/images/Alisa_Kanterman.jpg
       website: https://sans.hevra.haifa.ac.il/
       
     - name: Ameed Saabneh
-      bio: ""
+      bio: "Ameed Saabneh is a lecturer in the Department of Sociology at the University of Haifa with interest in social stratification, health inequality and demographic research. His current research focuses on income inequality in Israeli society in general and the Arab-Palestinian society in particular. He also explores how spatial and residential segregation explains the health inequalities between Palestinians and Jews in Israel, including those related to the covid-19 pandemic."
       image: /assets/images/Ameed_Saabneh.jpg
       website: https://sans.hevra.haifa.ac.il/
 
