first round post-mortens

--- a/_data/2022/aachen-graz/sidebar.yml
+++ b/_data/2022/aachen-graz/sidebar.yml
@@ -4,3 +4,6 @@
   url: "people"
 - name: Schedule & Materials
   url: "schedule"
+- name: Post Mortem"
+  url: "post-mortem"
+  link: '#aachen-graz'
