--- a/_data/2022/atlanta/sidebar.yml
+++ b/_data/2022/atlanta/sidebar.yml
@@ -1,8 +1,11 @@
 - name: Apply
   url: "apply"
-- name: People
-  url: "people"
 - name: Pre-arrival
   url: "pre_arrival"
-- name: Schedule
+- name: People
+  url: "people"
+- name: Schedule & Materials
   url: "schedule"
+- name: Post Mortem"
+  url: "post-mortem"
+  link: '#atlanta'
