--- a/_data/2022/howard-mathematica/sidebar.yml
+++ b/_data/2022/howard-mathematica/sidebar.yml
@@ -10,3 +10,6 @@
   url: "schedule"
 - name: In the News
   url: "in-the-news"
+- name: Post Mortem"
+  url: "post-mortem"
+  link: '#howard-mathematica'
