--- a/_data/2022/jias/sidebar.yml
+++ b/_data/2022/jias/sidebar.yml
@@ -6,6 +6,6 @@
   url: "people"
 - name: Schedule & Materials
   url: "schedule"
-- name: Post Mortem"
+- name: Post Mortem
   url: "post-mortem"
   link: '#jias'
