--- a/_data/2022/covenant-university/sidebar.yml
+++ b/_data/2022/covenant-university/sidebar.yml
@@ -8,6 +8,6 @@
   url: "schedule"
 - name: People
   url: "people"
-- name: Post Mortem"
+- name: Post Mortem
   url: "post-mortem"
   link: '#covenant-university'
