fix location on location.yml files

--- a/_data/2023/calabar/location.yml
+++ b/_data/2023/calabar/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/calabar.jpg
 title: Calabar
-subtitle: calabar_location
+subtitle: University of Calabar
 description: "June 26 to July 7, 2023"
 link: calabar
 year: 2023
