--- a/_data/2023/chile/location.yml
+++ b/_data/2023/chile/location.yml
@@ -1,6 +1,6 @@
 image: /assets/images/chile.jpg
 title: Chile
-subtitle: chile_location
+subtitle: Pontificia Universidad Católica
 description: "July 17 to July 27, 2023"
 link: chile
 year: 2023
