--- a/_data/2023/howard-mathematica/sidebar.yml
+++ b/_data/2023/howard-mathematica/sidebar.yml
@@ -1,5 +1,7 @@
 - name: Apply
   url: "apply"
+- name: SICSS-Howard/Mathematica Vision
+  url: "sicss-howard-mathematica-vision"
 - name: Pre-arrival
   url: "pre_arrival"
 - name: People
