--- a/_data/2022/howard-mathematica/people.yml
+++ b/_data/2022/howard-mathematica/people.yml
@@ -321,9 +321,9 @@ event_staff:
     
     <br><font size = "4">Event Staff - Coleman research lab
   
-    <img class="Coleman research lab" src="/assets/images/coleman_lab_1.png" width=80% height=80% />
+    <img class="Coleman Research Lab" src="/assets/images/coleman_lab_1.png" width=80% height=80% />
     
-    <img class="Coleman research lab" src="/assets/images/coleman_lab_2.png" width=80% height=80% />
+    <img class="Coleman Research Lab" src="/assets/images/coleman_lab_2.png" width=80% height=80% />
     
     <br><font size = "4">Event Staff - SICSS-H/M Alumni Legacy TFs
    
