Update profile links

--- a/_data/2022/howard-mathematica/schedule.yml
+++ b/_data/2022/howard-mathematica/schedule.yml
@@ -14,7 +14,7 @@
       
           - [Carter Clinton, Ph.D.](https://www.carterclinton.com/home), Postdoctoral Scholar, Anthropological Genomics Laboratory, The Pennsylvania State University
 
-          - [Sandra R. Kalu, Ph.D., LMSW](https://www.sandrakalu.com/about), Assistant Professor, School of Social Work, Howard University
+          - [Sandra R. Kalu, Ph.D., LMSW](https://profiles.howard.edu/sandra-kalu), Assistant Professor, School of Social Work, Howard University
           
           - [Williams Spriggs, Ph.D.](https://aflcio.org/policy-experts/william-e-spriggs), Professor, Economics Department, Howard University & Chief Economist, AFL-CIO
 
@@ -310,7 +310,7 @@
           
         **Moderator**
       
-          - [Susana Edjang](https://royalafricansociety.org/about/council/), Mason Fellow, Harvard Kennedy School of Government'
+          - [Susana Edjang](https://worldfellows.yale.edu/person/susana-edjang/), Mason Fellow, Harvard Kennedy School of Government'
         
   
     - name: "11:30 - 11:45 Break"
